--- a/config/x86-64_defconfig
+++ b/config/x86-64_defconfig
@@ -92,3 +92,6 @@ CONFIG_PACKAGE_lsblk=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_irqbalance=y
+CONFIG_PACKAGE_luci-proto-xmm=y
+CONFIG_PACKAGE_luci-app-modeminfo=y
+CONFIG_PACKAGE_luci-app-atinout=y
