--- a/config/x86-64_defconfig
+++ b/config/x86-64_defconfig
@@ -6,7 +6,8 @@ CONFIG_TARGET_ROOTFS_PARTSIZE=2084
 
 CONFIG_GRUB_TIMEOUT="1"
 CONFIG_LUCI_SRCDIET=y
-
+CONFIG_PACKAGE_xmm-modem=y
+CONFIG_PACKAGE_modeminfo-serial-xmm=y
 CONFIG_PACKAGE_ath10k-firmware-qca9888=y
 CONFIG_PACKAGE_ath10k-firmware-qca988x=y
 CONFIG_PACKAGE_ath10k-firmware-qca9984=y
