--- a/default-settings/Makefile
+++ b/default-settings/Makefile
@@ -39,8 +39,7 @@ define Package/default-settings
 		+luci-proto-ipv6 \
 		+odhcp6c \
 		+odhcpd-ipv6only \
-		+zram-swap \
-		+@LUCI_LANG_zh_Hans
+		+zram-swap
 endef
 
 define Build/Compile
@@ -49,9 +48,7 @@ endef
 define Package/default-settings/install
 	$(INSTALL_DIR) $(1)/etc/uci-defaults
 	$(INSTALL_BIN) ./files/zzz-default-settings $(1)/etc/uci-defaults/99-default-settings
-	$(INSTALL_DIR) $(1)/usr/lib/lua/luci/i18n
-	po2lmo ./i18n/default.zh-cn.po $(1)/usr/lib/lua/luci/i18n/default.zh-cn.lmo
-	po2lmo ./i18n/more.zh-cn.po $(1)/usr/lib/lua/luci/i18n/more.zh-cn.lmo
+
 endef
 
 $(eval $(call BuildPackage,default-settings))
