--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        target: [sunxi-cortexa7, sunxi-cortexa53, x86-64]
+        target: [x86-64]
 
     steps:
     - name: Clone Repository
