--- a/config/x86-64_defconfig
+++ b/config/x86-64_defconfig
@@ -1,7 +1,7 @@
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
-CONFIG_TARGET_ROOTFS_PARTSIZE=512
+CONFIG_TARGET_ROOTFS_PARTSIZE=2048
 # CONFIG_TARGET_ROOTFS_TARGZ is not set
 
 CONFIG_GRUB_TIMEOUT="1"
@@ -17,6 +17,16 @@ CONFIG_PACKAGE_default-settings=y
 # CONFIG_PACKAGE_dnsmasq is not set
 CONFIG_PACKAGE_dnsmasq-full=y
 CONFIG_PACKAGE_fdisk=y
+CONFIG_PACKAGE_v2raya=y
+CONFIG_PACKAGE_parted=y
+CONFIG_PACKAGE_php8=y
+CONFIG_PACKAGE_php8-cgi=y
+CONFIG_PACKAGE_php8-mod-ctype=y
+CONFIG_PACKAGE_php8-mod-fileinfo=y
+CONFIG_PACKAGE_php8-mod-iconv=y
+CONFIG_PACKAGE_php8-mod-mbstring=y
+CONFIG_PACKAGE_php8-mod-session=y
+CONFIG_PACKAGE_php8-mod-zip=y
 CONFIG_PACKAGE_kmod-8139cp=y
 CONFIG_PACKAGE_kmod-8139too=y
 CONFIG_PACKAGE_kmod-ath10k=y
@@ -35,19 +45,29 @@ CONFIG_PACKAGE_kmod-usb-net-asix-ax88179=y
 CONFIG_PACKAGE_kmod-usb-net-rndis=y
 CONFIG_PACKAGE_kmod-usb-net-rtl8152-vendor=y
 CONFIG_PACKAGE_kmod-vmxnet3=y
+CONFIG_PACKAGE_kmod-iwlwifi=y
+CONFIG_PACKAGE_modeminfo=y
+CONFIG_PACKAGE_modeminfo-serial-xmm=y
 CONFIG_PACKAGE_lm-sensors-detect=y
-CONFIG_PACKAGE_luci-app-accesscontrol=y
-CONFIG_PACKAGE_luci-app-arpbind=y
-CONFIG_PACKAGE_luci-app-autoreboot=y
-CONFIG_PACKAGE_luci-app-filetransfer=y
-CONFIG_PACKAGE_luci-app-ksmbd=y
+CONFIG_PACKAGE_luci-app-modeminfo=y
+CONFIG_PACKAGE_luci-app-atinout=y
+CONFIG_PACKAGE_luci-app-diskman=y
+CONFIG_PACKAGE_luci-proto-xmm=y
+CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-ramfree=y
-CONFIG_PACKAGE_luci-app-upnp=y
-CONFIG_PACKAGE_luci-app-usb-printer=y
-CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-ssl=y
+CONFIG_PACKAGE_badvpn=y
+CONFIG_PACKAGE_irqbalance=y
+CONFIG_PACKAGE_iw=y
+CONFIG_PACKAGE_iwinfo=y
+CONFIG_PACKAGE_corkscrew=y
+CONFIG_PACKAGE_iwlwifi-firmware-ax200=y
+CONFIG_PACKAGE_wwan=y
+CONFIG_PACKAGE_kmod-wwan=y
+CONFIG_PACKAGE_lm-sensors=y
+CONFIG_PACKAGE_lsblk=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 # CONFIG_PACKAGE_open-vm-tools is not set
 CONFIG_PACKAGE_wpad-basic-mbedtls=y
