--- a/config/x86-64_defconfig
+++ b/config/x86-64_defconfig
@@ -24,6 +24,7 @@ CONFIG_PACKAGE_php8-cgi=y
 CONFIG_PACKAGE_php8-mod-ctype=y
 CONFIG_PACKAGE_php8-mod-fileinfo=y
 CONFIG_PACKAGE_php8-mod-iconv=y
+CONFIG_PACKAGE_luci-app-pingcontrol=y
 CONFIG_PACKAGE_php8-mod-mbstring=y
 CONFIG_PACKAGE_php8-mod-session=y
 CONFIG_PACKAGE_php8-mod-zip=y
