--- a/default-settings/Makefile
+++ b/default-settings/Makefile
@@ -48,7 +48,9 @@ endef
 define Package/default-settings/install
 	$(INSTALL_DIR) $(1)/etc/uci-defaults
 	$(INSTALL_BIN) ./files/zzz-default-settings $(1)/etc/uci-defaults/99-default-settings
-
+	$(INSTALL_DIR) $(1)/etc/openclash/core
+	cp -r ./files/etc/openclash/core/* $(1)/etc/openclash/core/
+	
 endef
 
 $(eval $(call BuildPackage,default-settings))
