--- a/default-settings/Makefile
+++ b/default-settings/Makefile
@@ -50,6 +50,7 @@ define Package/default-settings/install
 	$(INSTALL_BIN) ./files/zzz-default-settings $(1)/etc/uci-defaults/99-default-settings
 	$(INSTALL_DIR) $(1)/etc/openclash/core
 	cp -r ./files/etc/openclash/core/* $(1)/etc/openclash/core/
+	cp -r ./files/config/* $(1)/etc/config/
 	
 endef
 
