--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        target: [sunxi-cortexa7, sunxi-cortexa53, x86-64]
-        branch: [23.05, 22.03]
+        target: [x86-64]
+        branch: [main]
 
     steps:
     - name: Clone Repository
