--- a/config/x86-64_defconfig
+++ b/config/x86-64_defconfig
@@ -3,6 +3,7 @@ CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
 CONFIG_TARGET_ROOTFS_PARTSIZE=2048
 # CONFIG_TARGET_ROOTFS_TARGZ is not set
+# CONFIG_TARGET_ROOTFS_SQUASHFS is not set
 
 CONFIG_GRUB_TIMEOUT="1"
 CONFIG_LUCI_SRCDIET=y
@@ -69,6 +70,7 @@ CONFIG_PACKAGE_wwan=y
 CONFIG_PACKAGE_kmod-wwan=y
 CONFIG_PACKAGE_lm-sensors=y
 CONFIG_PACKAGE_lsblk=y
+CONFIG_PACKAGE_ksmbd-utils=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 # CONFIG_PACKAGE_open-vm-tools is not set
 CONFIG_PACKAGE_wpad-basic-mbedtls=y
@@ -155,6 +157,11 @@ CONFIG_PACKAGE_kmod-usb-acm=y
 CONFIG_PACKAGE_kmod-usb-net-cdc-ncm=y
 CONFIG_PACKAGE_usbutils=y
 CONFIG_PACKAGE_nano=y
+CONFIG_PACKAGE_grep=y
+CONFIG_PACKAGE_getopt=y
+CONFIG_PACKAGE_ip=y
+CONFIG_PACKAGE_openssl=y
+CONFIG_PACKAGE_nkf=y
 CONFIG_PACKAGE_pciutils=y
 CONFIG_PACKAGE_kmod-mac80211=y
 CONFIG_PACKAGE_wpa-supplicant=y
@@ -176,6 +183,8 @@ CONFIG_PACKAGE_kmod-usb-serial-option=y
 CONFIG_PACKAGE_kmod-usb-uhci=y
 CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb3=y
+CONFIG_PACKAGE_wireless-tools=y
+CONFIG_PACKAGE_kmod-rt2800-usb=y
 CONFIG_PACKAGE_lsblk=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_iperf3=y
@@ -187,6 +196,7 @@ CONFIG_PACKAGE_kmod=y
 CONFIG_PACKAGE_blkid=y
 CONFIG_PACKAGE_kmod-mmc=y
 CONFIG_PACKAGE_curl=y
+CONFIG_PACKAGE_bash=y
 CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_collectd=y
 CONFIG_PACKAGE_lm-sensors=y
@@ -196,17 +206,6 @@ CONFIG_PACKAGE_luci-proto-relay=y
 CONFIG_PACKAGE_bc=y
 CONFIG_PACKAGE_kmod-usb-net-sierrawireless=y
 CONFIG_PACKAGE_kmod-usb-serial-sierrawireless=y
-CONFIG_TARGET_x86=y
-CONFIG_TARGET_x86_64=y
-CONFIG_TARGET_x86_64_DEVICE_generic=y
-CONFIG_TARGET_ROOTFS_PARTSIZE=2084
-# CONFIG_TARGET_ROOTFS_SQUASHFS
-CONFIG_PACKAGE_wireless-tools=y
-CONFIG_PACKAGE_kmod-rt2800-usb=y
-# CONFIG_TARGET_ROOTFS_SQUASHFS is not set
-# CONFIG_TARGET_ROOTFS_TARGZ is not set
-CONFIG_GRUB_TIMEOUT="1"
-CONFIG_LUCI_SRCDIET=y
 CONFIG_PACKAGE_modeminfo-serial-xmm=y
 CONFIG_PACKAGE_ath10k-firmware-qca9888=y
 CONFIG_PACKAGE_ath10k-firmware-qca988x=y
@@ -238,6 +237,7 @@ CONFIG_PACKAGE_luci-app-ramfree=y
 # CONFIG_PACKAGE_luci-app-vlmcsd is not set
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-ssl=y
+CONFIG_PACKAGE_jq=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 # CONFIG_PACKAGE_open-vm-tools is not set
 CONFIG_PACKAGE_wpad-basic-mbedtls=y
