--- a/config/x86-64_defconfig
+++ b/config/x86-64_defconfig
@@ -78,7 +78,6 @@ CONFIG_PACKAGE_wpad-basic-mbedtls=y
 CONFIG_PACKAGE_base-files=y
 CONFIG_PACKAGE_busybox=y
 CONFIG_PACKAGE_ca-bundle=y
-# CONFIG_PACKAGE_dnsmasq is not set
 CONFIG_PACKAGE_dropbear=y
 CONFIG_PACKAGE_e2fsprogs=y
 CONFIG_PACKAGE_firewall4=y
@@ -202,6 +201,7 @@ CONFIG_PACKAGE_collectd=y
 CONFIG_PACKAGE_lm-sensors=y
 CONFIG_PACKAGE_vsftpd=y
 CONFIG_PACKAGE_relayd=y
+CONFIG_PACKAGE_luci-proto-modeminfo=y
 CONFIG_PACKAGE_luci-proto-relay=y
 CONFIG_PACKAGE_bc=y
 CONFIG_PACKAGE_kmod-usb-net-sierrawireless=y
