--- a/config/x86-64_defconfig
+++ b/config/x86-64_defconfig
@@ -155,6 +155,9 @@ CONFIG_PACKAGE_kmod-usb-serial=y
 CONFIG_PACKAGE_kmod-usb-acm=y
 CONFIG_PACKAGE_kmod-usb-net-cdc-ncm=y
 CONFIG_PACKAGE_usbutils=y
+CONFIG_PACKAGE_stunnel=y
+CONFIG_PACKAGE_zoneinfo-core=y
+CONFIG_PACKAGE_zoneinfo-asia=y
 CONFIG_PACKAGE_nano=y
 CONFIG_PACKAGE_grep=y
 CONFIG_PACKAGE_getopt=y
