--- a/config/x86-64_defconfig
+++ b/config/x86-64_defconfig
@@ -25,7 +25,7 @@ CONFIG_PACKAGE_php8-cgi=y
 CONFIG_PACKAGE_php8-mod-ctype=y
 CONFIG_PACKAGE_php8-mod-fileinfo=y
 CONFIG_PACKAGE_php8-mod-iconv=y
-CONFIG_PACKAGE_luci-app-pingcontrol=y
+# CONFIG_PACKAGE_luci-app-pingcontrol is not set
 CONFIG_PACKAGE_php8-mod-mbstring=y
 CONFIG_PACKAGE_php8-mod-session=y
 CONFIG_PACKAGE_php8-mod-zip=y
@@ -137,8 +137,8 @@ CONFIG_PACKAGE_kmod-tulip=y
 CONFIG_PACKAGE_kmod-usb-audio=y
 CONFIG_PACKAGE_kmod-usb-hid=y
 CONFIG_PACKAGE_kmod-usb-net=y
-CONFIG_PACKAGE_kmod-usb-net-asix=y
-CONFIG_PACKAGE_kmod-usb-net-asix-ax88179=y
+# CONFIG_PACKAGE_kmod-usb-net-asix is not set
+# CONFIG_PACKAGE_kmod-usb-net-asix-ax88179 is not set
 CONFIG_PACKAGE_kmod-usb-net-rtl8150=y
 CONFIG_PACKAGE_kmod-vmxnet3=y
 CONFIG_PACKAGE_luci-app-opkg=y
@@ -248,6 +248,9 @@ CONFIG_PACKAGE_luci-proto-xmm=y
 CONFIG_PACKAGE_luci-app-modeminfo=y
 CONFIG_PACKAGE_luci-app-atinout=y
 CONFIG_PACKAGE_modeminfo=y
+CONFIG_PACKAGE_pv=y
+CONFIG_PACKAGE_ntfs-3g=y
+CONFIG_PACKAGE_gzip=y
 CONFIG_PACKAGE_rqmi=y
 CONFIG_PACKAGE_rmbim=y
 CONFIG_PACKAGE_luci-proto-3x=y
