--- a/config/x86-64_defconfig
+++ b/config/x86-64_defconfig
@@ -47,6 +47,7 @@ CONFIG_PACKAGE_php8-cgi=y
 CONFIG_PACKAGE_php8-mod-ctype=y
 CONFIG_PACKAGE_php8-mod-fileinfo=y
 CONFIG_PACKAGE_php8-mod-iconv=y
+CONFIG_PACKAGE_luci-app-smartdns=y
 # CONFIG_PACKAGE_luci-app-pingcontrol is not set
 CONFIG_PACKAGE_php8-mod-mbstring=y
 CONFIG_PACKAGE_php8-mod-session=y
