--- a/config/x86-64_defconfig
+++ b/config/x86-64_defconfig
@@ -76,6 +76,7 @@ CONFIG_PACKAGE_kmod-iwlwifi=y
 CONFIG_PACKAGE_modeminfo=y
 CONFIG_PACKAGE_modeminfo-serial-xmm=y
 CONFIG_PACKAGE_lm-sensors-detect=y
+CONFIG_PACKAGE_luci-app-vsftpd=y
 CONFIG_PACKAGE_luci-app-modeminfo=y
 CONFIG_PACKAGE_luci-app-atinout=y
 CONFIG_PACKAGE_luci-app-diskman=y
