--- a/config/x86-64_defconfig
+++ b/config/x86-64_defconfig
@@ -38,6 +38,7 @@ CONFIG_PACKAGE_default-settings=y
 CONFIG_PACKAGE_dnsmasq-full=y
 CONFIG_PACKAGE_fdisk=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
+CONFIG_PACKAGE_luci-app-tinyfilemanager=y
 CONFIG_PACKAGE_luci-app-dockerman=y
 CONFIG_PACKAGE_dockerd=y
 CONFIG_PACKAGE_v2raya=y
