--- a/config/x86-64_defconfig
+++ b/config/x86-64_defconfig
@@ -229,7 +229,7 @@ CONFIG_PACKAGE_bash=y
 CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_collectd=y
 CONFIG_PACKAGE_lm-sensors=y
-CONFIG_PACKAGE_vsftpd=y
+CONFIG_PACKAGE_vsftpd-alt=y
 CONFIG_PACKAGE_relayd=y
 CONFIG_PACKAGE_luci-proto-modemmanager=y
 CONFIG_PACKAGE_luci-proto-relay=y
