--- a/config/x86-64_defconfig
+++ b/config/x86-64_defconfig
@@ -39,9 +39,9 @@ CONFIG_PACKAGE_dnsmasq-full=y
 CONFIG_PACKAGE_fdisk=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-tinyfilemanager=y
-CONFIG_PACKAGE_luci-app-dockerman=y
+# CONFIG_PACKAGE_luci-app-dockerman is not set
 CONFIG_PACKAGE_dockerd=y
-CONFIG_PACKAGE_v2raya=y
+# CONFIG_PACKAGE_v2raya is not set
 CONFIG_PACKAGE_parted=y
 CONFIG_PACKAGE_php8=y
 CONFIG_PACKAGE_php8-cgi=y
@@ -91,7 +91,7 @@ CONFIG_PACKAGE_badvpn=y
 CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_iw=y
 CONFIG_PACKAGE_iwinfo=y
-CONFIG_PACKAGE_corkscrew=y
+# CONFIG_PACKAGE_corkscrew is not set
 CONFIG_PACKAGE_iwlwifi-firmware-ax200=y
 CONFIG_PACKAGE_wwan=y
 CONFIG_PACKAGE_kmod-wwan=y
