--- a/config/x86-64_defconfig
+++ b/config/x86-64_defconfig
@@ -4,6 +4,7 @@ CONFIG_TARGET_x86_64_DEVICE_generic=y
 CONFIG_TARGET_ROOTFS_PARTSIZE=2048
 CONFIG_GRUB_TIMEOUT="1"
 CONFIG_LUCI_SRCDIET=y
+# CONFIG_PACKAGE_dnsmasq is not set
 CONFIG_PACKAGE_dosfstools=y
 CONFIG_PACKAGE_kmod-fs-msdos=y
 CONFIG_PACKAGE_kmod-nls-cp932=y
