--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
       branch:
         description: 'your local repo branch'
         required: true
-        default: 23.05
+        default: master
         type: choice
         options:
         - master
@@ -16,11 +16,11 @@ on:
       targets:
         description: 'target devices'
         required: true
-        default: "['sunxi-cortexa53', 'x86-64']"
+        default: "['x86-64']"
         type: choice
         options:
         - "['meson-meson8b']"
-        - "['sunxi-cortexa53', 'x86-64']"
+        - "['x86-64']"
         - "['meson-meson8b', 'sunxi-cortexa53', 'x86-64']"
 
 jobs:
